# substrate-node-template-self

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  LICENSE
img/: substrate-playground.drawio
node/: Cargo.toml
node/src/: service.rs
pallets/: README.md
pallets/arithmetic/: Cargo.toml
pallets/arithmetic/src/: lib.rs  mock.rs  tests.rs
pallets/bank/: CHANGELOG  Cargo.toml  README.md
pallets/bank/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/counter/: Cargo.toml  README.md
pallets/counter/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/dpos/: Cargo.toml  README.md
pallets/dpos/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/eosio_system/: Cargo.toml  README.md
pallets/eosio_system/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/flipper/: Cargo.toml  README.md
pallets/flipper/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/hello/: Cargo.toml  README.md
pallets/hello/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/lockable-currency/: Cargo.toml  README.md
pallets/lockable-currency/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs  mock.rs
pallets/offchain-worker/: Cargo.toml  README.md
pallets/offchain-worker/src/: lib.rs
pallets/template/: README.md
pallets/vault/: Cargo.toml  README.md
pallets/vault/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/voting/: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: lib.rs
(+4 files in other folders)
