[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/hello",
    "pallets/flipper",
    "pallets/counter",
    "pallets/vault",
    "pallets/voting",
    "pallets/lockable-currency",
    "pallets/bank",
    "pallets/eosio_system",
    "pallets/ocw",
    "runtime",
]
[profile.release]
panic = "unwind"
